--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -5,19 +5,29 @@
 <div class="container-fluid register-bg">
     <div class="row">
         <div class="col-md-6 mx-auto mt-5">
-            <div class="sign-up border p-3">
-            
-                <form method="post" class="register">
-                    {% csrf_token %}
+            <div class="sign-up border p-5" style="background-color: #F4F7F6;">
+                <div class="header mx-5 py-3">
+                    <p class="h2 fs-5" style="display: inline;">Sign In to continue</p>
+                    <span style="float: right; display: inline;">Not a memeber yet? <a href="{% url 'register' %}" class="fw-bold" style="text-decoration: none;">Register Now</a></span>
+                
+                </div>
+                
+                <form method="post" class="register mx-5">
+                    {% csrf_token %} 
                     {{form|crispy}}
-                   
+                    
                     <br>
-                    <input type="submit" value="Sign Up" class="btn btn-info my-4 text-white" style="width: 100%;">
+                    <input type="submit" value="CREATE YOUR ACCOUNT" class="btn btn-info my-4 text-white p-3" style="width: 100%;">
                 </form>
-            </div>
-
-            <div class="border my-4 text-center p-4 text-muted sign-up"><small>Have an account? <a href="" class="ms-3 text-decoration-none">Log in</a></small></div>
-        
+                <div class="mx-5">
+                    <p class="h2 fs-5 my-4" style="display: inline;">Or with your E-mail</p>
+                </div>
+                <div class="text-center my-5">
+                    <a href="" class="btn btn-light  py-3 px-4"><i class="fab fa-google"></i> Google</a>
+                    <a href="" class="btn btn-info py-3 px-4 text-white mx-2"><i class="fab fa-twitter"></i> Twitter</a>
+                    <a href="" class="btn btn-primary py-3 px-4"><i class="fab fa-facebook-f"></i> Facebook</a>
+                </div>
+            </div>        
         </div>
     </div>
 </div>
