feature --add user profile model

--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -17,7 +17,7 @@
                     {{form|crispy}}
                     
                     <br>
-                    <input type="submit" value="CREATE YOUR ACCOUNT" class="btn btn-info my-4 text-white p-3" style="width: 100%;">
+                    <input type="submit" value="LOGIN NOW" class="btn btn-info my-4 text-white p-3" style="width: 100%;">
                 </form>
                 <div class="mx-5">
                     <p class="h2 fs-5 my-4" style="display: inline;">Or with your E-mail</p>
