--- a/awwwards_app/templates/awwwards_app/navbar.html
+++ b/awwwards_app/templates/awwwards_app/navbar.html
@@ -17,6 +17,23 @@
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item ms-3">
+            <a class="nav-link" href="{% url 'login' %}">REGISTER/SIGN IN</a>
+            </li>
+            <li class="nav-item dropdown px-2">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Charles-Okunzo
+                    <img src="../../../static/images/user7.jpg" title="Profile picture" style="border-radius: 50%;" height="25" width="25">
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="{% url 'profile' %}"><i class="fa-solid fa-circle-user pe-2"></i> Profile</a></li>
+                  <li><a class="dropdown-item" href=""><i class="fa-solid fa-gear pe-2"></i> Settings</a></li>
+                  <li><hr class="dropdown-divider"></li><hr>
+                  <li><a class="dropdown-item" href="">Log out <span class="iconify" data-icon="carbon:logout"></span></a></li>
+                </ul>
+              </li>
+        </ul>
       </div>
     </div>
   </nav>
