--- a/awwwards_app/templates/awwwards_app/navbar.html
+++ b/awwwards_app/templates/awwwards_app/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="#">Awwwards</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -12,27 +12,34 @@
           <li class="nav-item">
             <a class="nav-link" href="/admin">Admin</a>
           </li>
+          <button class="search-btn" id="search-btn" style="border: none; font-size: larger; background-color: transparent;" type="submit"><span class="iconify" data-icon="carbon:search"></span></button>
+          <div class="search-form" id="search-form">
+            <form class="d-flex search-form">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="" style="border: none; font-size: larger; background-color: transparent;" type="submit"><span class="iconify" data-icon="carbon:search"></span></button>
+            </form>
+          </div>
         </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
+        
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item ms-3">
             <a class="nav-link" href="{% url 'login' %}">REGISTER/SIGN IN</a>
             </li>
             <li class="nav-item dropdown px-2">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Charles-Okunzo
+                    CHARLES OKUNZO
                     <img src="../../../static/images/user7.jpg" title="Profile picture" style="border-radius: 50%;" height="25" width="25">
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item" href="{% url 'profile' %}"><i class="fa-solid fa-circle-user pe-2"></i> Profile</a></li>
                   <li><a class="dropdown-item" href=""><i class="fa-solid fa-gear pe-2"></i> Settings</a></li>
-                  <li><hr class="dropdown-divider"></li><hr>
+                  <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="">Log out <span class="iconify" data-icon="carbon:logout"></span></a></li>
                 </ul>
               </li>
+              <li class="nav-item ms-3">
+                <a class="nav-link btn btn-dark text-white" href="{% url 'login' %}">SUBMIT YOUR SITE!</a>
+                </li>
         </ul>
       </div>
     </div>
