style --add create project template

--- a/awwwards_app/templates/awwwards_app/navbar.html
+++ b/awwwards_app/templates/awwwards_app/navbar.html
@@ -38,7 +38,7 @@
                 </ul>
               </li>
               <li class="nav-item ms-3">
-                <a class="nav-link btn btn-dark text-white" href="{% url 'login' %}">SUBMIT YOUR SITE!</a>
+                <a class="nav-link btn btn-dark text-white" href="{% url 'create-project' %}">SUBMIT YOUR SITE!</a>
                 </li>
         </ul>
       </div>
