--- a/awwwards_app/templates/index.html
+++ b/awwwards_app/templates/index.html
@@ -8,7 +8,7 @@
 <div class="container">
     <div class="row justify-content-between g-0">
         {% for project in projects %}
-        <div class="col-md-3 project d-flex align-items-end" style="background-image: url({{project.image.url}}); min-height: 50vh;">
+        <div class="col-md-4 project d-flex align-items-end my-4" style="background-image: url({{project.image.url}}); min-height: 50vh; width: 18rem;">
             <div class="text-center proj-content" style="background-color: rgba(0, 0, 0, 0.5); width: 100%; margin: 0; color: #fff; padding: 3% 0;">
                 <p class="h4">{{project.title}}</p>
                 <p class="blockquote-footer pt-3 text-light">By {{project.user.username}}</p>
