style --add background to create project page

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -29,6 +29,13 @@ small#hint_id_password2
     cursor: pointer;
 }
 
+.create-bg{
+    background-image:linear-gradient(to bottom, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(../../static/images/project_model_structure_177208_1280x720.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
 
 .register-bg{
     background-position: center;
@@ -40,6 +47,17 @@ small#hint_id_password2
     transform: scale(1.1);
 }
 
-.proj-content{
+/* .proj-content{
     display: none;
+} */
+
+.create-form{
+    color: rgb(244, 247, 246);
+    backdrop-filter: blur(10px);
+    /* background-color: rgba(244, 247, 246, 0.8); */
+}
+
+.create-form input[type="text"], .create-form textarea, .create-form textarea:focus{
+    background-color: rgba(244, 247, 246, 0.3);
+    color: white;
 }
