--- a/awwwards_app/templates/awwwards_app/create_project.html
+++ b/awwwards_app/templates/awwwards_app/create_project.html
@@ -2,10 +2,10 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<div class="container-fluid">
+<div class="container-fluid create-bg">
     <div class="row">
-        <div class="col-md-6 mx-auto mt-5">
-            <div class="sign-up border p-5" style="background-color: #F4F7F6;">
+        <div class="col-md-6 mx-auto my-5">
+            <div class="create-form border p-5">
                 <div class="header mx-md-5 py-3">
                     <p class="h2 fs-5" style="display: inline;">Create New Project</p>                
                 </div>
