--- a/awwwards_app/templates/awwwards_app/project-detail.html
+++ b/awwwards_app/templates/awwwards_app/project-detail.html
@@ -11,7 +11,7 @@
         <div class="col-md-6 max-vh-100">
             <img src="{{project.image.url}}" class="img-fluid mt-5 detail-img border" style="object-fit: contain;" alt="{{project.title}}">
         </div>
-        <div class="col-md-6 ps-md-5 mt-5">
+        <div class="col-md-6 ps-md-5 my-5">
             <h4>Title:</h4><hr>
             <p class="p-2">
                 {{project.title}}
@@ -20,6 +20,10 @@
             <h4>Description:</h4><hr>
             <p class="p-2">
                 {{project.description}}
+            </p>
+            <h4>Developer:</h4><hr>
+            <p class="p-2 blockquote-footer">
+                {{project.user.username}}
             </p>
 
             <h4>Date posted:</h4><hr>
