feature --add logout template page

--- a/awwwards_app/templates/index.html
+++ b/awwwards_app/templates/index.html
@@ -6,7 +6,7 @@
 
 
 <div class="container">
-    <h2>ALL PROJECTS</h2><hr class="line">
+    <h4 class="fw-bold">ALL PROJECTS</h4><hr class="line">
     <div class="row justify-content-between g-0">
         {% for project in projects %}
         <div class="col-md-4 project d-flex align-items-end my-4" style="background-image: url({{project.image.url}}); min-height: 50vh; width: 18rem;">
