--- a/awwwards_app/templates/awwwards_app/navbar.html
+++ b/awwwards_app/templates/awwwards_app/navbar.html
@@ -1,16 +1,16 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/">Awwwards</a>
+      <!-- <a class="navbar-brand" href="/">Awwwards</a> -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/">Home</a>
+            <a class="nav-link active fw-bold" aria-current="page" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/admin">Admin</a>
+            <a class="nav-link fw-bold" href="/admin">Admin</a>
           </li>
           <button class="search-btn" id="search-btn" style="border: none; font-size: larger; background-color: transparent;" type="submit"><span class="iconify" data-icon="carbon:search"></span></button>
           <div class="search-form" id="search-form">
@@ -20,11 +20,17 @@
             </form>
           </div>
         </ul>
+
+        <div class="mx-auto" id="awwwards-logo">
+          <h3 class="fw-bold text-center">awwwards.</h3>
+        </div>
         
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <ul class="navbar-nav mb-2 mb-lg-0">
             <li class="nav-item ms-3">
-            <a class="nav-link" href="{% url 'login' %}">REGISTER/SIGN IN</a>
+            <a class="nav-link fw-bold" href="{% url 'login' %}">REGISTER/SIGN IN</a>
             </li>
+
+            {% if user.is_authenticated %}
             <li class="nav-item dropdown px-2">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   {{user.username|upper}}
@@ -34,9 +40,10 @@
                   <li><a class="dropdown-item" href="{% url 'profile' user.username%}"><i class="fa-solid fa-circle-user pe-2"></i> Profile</a></li>
                   <li><a class="dropdown-item" href="{% url 'profile-update' user.username%}"><i class="fa-solid fa-gear pe-2"></i> Settings</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="">Log out <span class="iconify" data-icon="carbon:logout"></span></a></li>
+                  <li><a class="dropdown-item" href="{% url 'logout' %}">Log out <span class="iconify" data-icon="carbon:logout"></span></a></li>
                 </ul>
               </li>
+              {% endif %}
               <li class="nav-item ms-3">
                 <a class="nav-link btn btn-dark text-white" href="{% url 'create-project' %}">SUBMIT YOUR SITE!</a>
                 </li>
