feature --add search functionality

--- a/awwwards_app/templates/awwwards_app/create_project.html
+++ b/awwwards_app/templates/awwwards_app/create_project.html
@@ -5,10 +5,10 @@
 <div class="container-fluid create-bg">
     <div class="row">
         <div class="col-md-6 mx-auto my-5">
+            <div class="header mx-md-5 py-3 text-center">
+                <p class="h1 fs-3 fw-bold" style="display: inline;">Standard Submission</p>                
+            </div>
             <div class="create-form border p-5">
-                <div class="header mx-md-5 py-3">
-                    <p class="h2 fs-5" style="display: inline;">Create New Project</p>                
-                </div>
                 
                 <form method="post" class="create mx-md-5" enctype="multipart/form-data">
                     {% csrf_token %} 
