--- a/awwwards_app/templates/awwwards_app/navbar.html
+++ b/awwwards_app/templates/awwwards_app/navbar.html
@@ -15,7 +15,7 @@
           <button class="search-btn" id="search-btn" style="border: none; font-size: larger; background-color: transparent;" type="submit"><span class="iconify" data-icon="carbon:search"></span></button>
           <div class="search-form" id="search-form">
             <form class="d-flex search-form">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <input class="form-control me-2" name="search_proj" type="search" placeholder="Search" aria-label="Search">
               <button class="" style="border: none; font-size: larger; background-color: transparent;" type="submit"><span class="iconify" data-icon="carbon:search"></span></button>
             </form>
           </div>
