--- a/awwwards_app/templates/awwwards_app/navbar.html
+++ b/awwwards_app/templates/awwwards_app/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light py-3">
     <div class="container-fluid">
       <!-- <a class="navbar-brand" href="/">Awwwards</a> -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,10 +26,7 @@
         </div>
         
         <ul class="navbar-nav mb-2 mb-lg-0">
-            <li class="nav-item ms-3">
-            <a class="nav-link fw-bold" href="{% url 'login' %}">REGISTER/SIGN IN</a>
-            </li>
-
+          
             {% if user.is_authenticated %}
             <li class="nav-item dropdown px-2">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -43,6 +40,10 @@
                   <li><a class="dropdown-item" href="{% url 'logout' %}">Log out <span class="iconify" data-icon="carbon:logout"></span></a></li>
                 </ul>
               </li>
+              {% else %}
+              <li class="nav-item ms-3">
+                <a class="nav-link fw-bold" href="{% url 'login' %}">REGISTER/SIGN IN</a>
+                </li>
               {% endif %}
               <li class="nav-item ms-3">
                 <a class="nav-link btn btn-dark text-white" href="{% url 'create-project' %}">SUBMIT YOUR SITE!</a>
