--- a/awwwards_app/templates/index.html
+++ b/awwwards_app/templates/index.html
@@ -3,8 +3,10 @@
 
 
 {% block content %}
-
 <div class="cont">
+    {% if found_proj %}
+    <h4 class="mx-auto">Found {{found_proj|length}} results from your search...</h4>
+    {% else %}
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 project" style="background-image: url(../../static/images/Screenshot\ from\ 2022-05-29\ 22-41-56.png); min-height: 80vh;background-color: rgba(0, 0, 0, 0.5); width: 100%; margin: 0; color: #fff; padding: 3% 0;">
@@ -19,6 +21,7 @@
             </div>
         </div>
     </div>
+    {% endif %}
     <div class="container">
         <h4 class="fw-bold mt-5">ALL SITES</h4><hr class="line">
         <div class="row justify-content-between g-0">
