--- a/awwwards_app/templates/awwwards_app/project-detail.html
+++ b/awwwards_app/templates/awwwards_app/project-detail.html
@@ -6,39 +6,43 @@
 
 
 <div class="container">
-    <h2>PROJECT DETAILS</h2><hr class="line">
+    <h4 class="mt-5">Project / <span class="fw-bold">{{project.title}}</span></h4><hr class="line">
     <div class="row justify-content-between g-0">
-        <div class="col-md-6 max-vh-100">
-            <img src="{{project.image.url}}" class="img-fluid mt-5 detail-img border" style="object-fit: contain;" alt="{{project.title}}">
+        <div class="col-md-8 mx-auto project" style="background-image: url({{project.image.url}}); min-height: 80vh;background-color: rgba(0, 0, 0, 0.5); margin: 0; color: #fff; padding: 3% 0;">
+            <div class="overlay opacity">
+               
+            </div>
         </div>
-        <div class="col-md-6 ps-md-5 my-5">
-            <h4>Title:</h4><hr>
-            <p class="p-2">
-                {{project.title}}
+        <div class="col-md-8 mx-auto">
+            <a href="{% url 'rate-project' pk=project.id %}" style="width: 100%;" class="btn btn-info text-white fw-bold m-0 p-3">VOTE NOW</a>
+        </div>
+        <div class="col-md-8 mx-auto my-5">
+            <p class="p-2 h4 fw-bold">
+                {{project.title}} <span style="float: right;" class="fs-6">{{project.date_posted|timesince}}</span>
             </p>
+            <span class="p-2 blockquote-footer fw-bold">
+                By <span class="text-info">{{project.user.username|upper}}</span>
+            </span>
 
-            <h4>Description:</h4><hr>
-            <p class="p-2">
+            <p class="p-2 py-3">
                 {{project.description}}
-            </p>
-            <h4>Developer:</h4><hr>
-            <p class="p-2 blockquote-footer">
-                {{project.user.username}}
-            </p>
-
-            <h4>Date posted:</h4><hr>
-            <p class="p-2">
-                {{project.date_posted|date:'F d, Y'}}
-            </p>
+            </p>            
+           
             <h4>Live Link:</h4><hr>
             <p class="p-2">
                 <a href="{{project.link}}">{{project.link}}</a>
             </p>
             <h4>Ratings:</h4><hr>
             <p class="p-2">
-                0
+                Design: <span>{{project.ratings.design}}</span>{{project.ratings.count}}
             </p>
-            <a href="{% url 'rate-project' pk=project.id %}" name="proj-id" class="btn btn-outline-secondary">Rate this project</a>
+            <p class="p-2">
+                Usability: <span>{{project.ratings.usability}}</span>
+            </p>
+            <p class="p-2">
+                Content: <span>{{project.ratings.content}}</span>
+            </p>
+            <!-- <a href="{% url 'rate-project' pk=project.id %}" name="proj-id" class="btn btn-outline-secondary">Rate this project</a> -->
         </div>
     </div>
 </div>
