--- a/awwwards_app/templates/awwwards_app/project-detail.html
+++ b/awwwards_app/templates/awwwards_app/project-detail.html
@@ -34,13 +34,16 @@
             </p>
             <h4>Ratings:</h4><hr>
             <p class="p-2">
-                Design: <span>{{project.ratings.design}}</span>{{project.ratings.count}}
+                Design: <span class="fw-bold">{{aver_design}}</span>
             </p>
             <p class="p-2">
-                Usability: <span>{{project.ratings.usability}}</span>
+                Usability: <span class="fw-bold">{{aver_usability}}</span>
             </p>
             <p class="p-2">
-                Content: <span>{{project.ratings.content}}</span>
+                Content: <span class="fw-bold">{{aver_content}}</span>
+            </p>
+            <p class="p-2">
+                Average rating: <span class="fw-bold">{{grand_average}}</span>
             </p>
             <!-- <a href="{% url 'rate-project' pk=project.id %}" name="proj-id" class="btn btn-outline-secondary">Rate this project</a> -->
         </div>
