fix --fix value error on the ratings

--- a/awwwards_app/templates/awwwards_app/navbar.html
+++ b/awwwards_app/templates/awwwards_app/navbar.html
@@ -20,11 +20,12 @@
             </form>
           </div>
         </ul>
-
-        <div class="mx-auto" id="awwwards-logo">
+        <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+        <div class="m-auto" id="awwwards-logo">
           <h3 class="fw-bold text-center">awwwards.</h3>
         </div>
-        
+        </ul>
+
         <ul class="navbar-nav mb-2 mb-lg-0">
           
             {% if user.is_authenticated %}
