--- a/awwwards_app/templates/awwwards_app/project-detail.html
+++ b/awwwards_app/templates/awwwards_app/project-detail.html
@@ -14,7 +14,11 @@
             </div>
         </div>
         <div class="col-md-8 mx-auto">
+            {% if vote_status %}
             <a href="{% url 'rate-project' pk=project.id %}" style="width: 100%;" class="btn btn-info text-white fw-bold m-0 p-3">VOTE NOW</a>
+            {% else %}
+            <a href="{% url 'rate-project' pk=project.id %}" style="width: 100%;" class="btn btn-info text-white fw-bold m-0 p-3">VOTED</a>
+            {% endif %}
         </div>
         <div class="col-md-8 mx-auto my-5">
             <p class="p-2 h4 fw-bold">
@@ -33,6 +37,7 @@
                 <a href="{{project.link}}">{{project.link}}</a>
             </p>
             <h4>Ratings:</h4><hr>
+            
             <p class="p-2">
                 Design: <span class="fw-bold">{{aver_design}}</span>
             </p>
