--- a/static/css/index.css
+++ b/static/css/index.css
@@ -37,7 +37,6 @@ small#hint_id_password2
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    /* box-shadow: 5px 5px 20px 5px #cfcfcf; */
     transition: all 500ms ease-in-out;
     cursor: pointer;
     position: relative;
@@ -45,6 +44,9 @@ small#hint_id_password2
     place-items: center;
 }
 
+.found-div{
+    box-shadow: 5px 5px 20px 5px #cfcfcf;
+}
 .project a{
     z-index: 5;
 }
