--- a/awwwards_app/templates/awwwards_app/base.html
+++ b/awwwards_app/templates/awwwards_app/base.html
@@ -12,7 +12,7 @@
     {% endif %}
 
     {% block styles %}
-    <link rel="shortcut icon" href="../../../static/images/" type="image/x-icon">
+    <link rel="shortcut icon" href="../../../static/images/awwwards-logo-removebg-preview.png" type="image/x-icon">
     <link rel="stylesheet" href="{% static 'css/index.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     {% endblock %}
