--- a/awwwards_app/templates/index.html
+++ b/awwwards_app/templates/index.html
@@ -18,10 +18,32 @@
             <div class="col-12 project" style="background-image: url(../../static/images/Screenshot\ from\ 2022-05-29\ 22-41-56.png); min-height: 80vh;background-color: rgba(0, 0, 0, 0.5); width: 100%; margin: 0; color: #fff; padding: 3% 0;">
                 <div class="overlay">
                     <h5 id="site-of-day"><span class="fw-bold">Site of the day</span> June 13, 2022</h5>
-                    <div>
-                        <h3 class="fw-bold">My Gallery</h3>
-                        <p>BY CHARLES OKUNZO</p>               
-                    </div>
+                    <div class="text-center">
+                        <div>
+                            <h3 class="fw-bold">My Gallery</h3>
+                            <p>BY CHARLES OKUNZO</p>
+                        </div>
+                        <div class="d-flex">
+                            <span class="p-2 mx-3 circle text-center red">
+                                <span>
+                                    <span class="fw-bold">9</span><br>
+                                Design
+                                </span>
+                            </span>
+                            <span class="p-2 mx-3 circle text-center yellow">
+                                <span>
+                                    <span class="fw-bold">10</span><br>
+                                Usability
+                                </span>
+                            </span>
+                            <span class="p-2 mx-3 circle text-center green">
+                               <span>
+                                <span class="fw-bold">8</span><br>
+                                Content
+                               </span>
+                            </span>
+                        </div>    
+                    </div>           
                     <a href="" style="border-radius:30px;float: left;" class="btn btn-info text-white fw-bold m-0">VOTE NOW</a>
                 </div>
             </div>
