--- a/awwwards_app/templates/awwwards_app/project-detail.html
+++ b/awwwards_app/templates/awwwards_app/project-detail.html
@@ -38,18 +38,29 @@
             </p>
             <h4>Ratings:</h4><hr>
             
-            <p class="p-2">
-                Design: <span class="fw-bold">{{aver_design}}</span>
-            </p>
-            <p class="p-2">
-                Usability: <span class="fw-bold">{{aver_usability}}</span>
-            </p>
-            <p class="p-2">
-                Content: <span class="fw-bold">{{aver_content}}</span>
-            </p>
-            <p class="p-2">
+            <div class="d-flex">
+                <span class="p-2 mx-3 circle text-center red">
+                    <span>
+                        <span class="fw-bold">{{aver_design}}</span><br>
+                    Design
+                    </span>
+                </span>
+                <span class="p-2 mx-3 circle text-center yellow">
+                    <span>
+                        <span class="fw-bold">{{aver_usability}}</span><br>
+                    Usability
+                    </span>
+                </span>
+                <span class="p-2 mx-3 circle text-center green">
+                   <span>
+                    <span class="fw-bold">{{aver_content}}</span><br>
+                    Content
+                   </span>
+                </span>
+            </div>
+            <span class="p-2 py-4">
                 Average rating: <span class="fw-bold">{{grand_average}}</span>
-            </p>
+            </span>
             <!-- <a href="{% url 'rate-project' pk=project.id %}" name="proj-id" class="btn btn-outline-secondary">Rate this project</a> -->
         </div>
     </div>
