--- a/awwwards_app/templates/index.html
+++ b/awwwards_app/templates/index.html
@@ -21,7 +21,7 @@
                     <div class="text-center">
                         <div>
                             <h3 class="fw-bold">My Gallery</h3>
-                            <p>BY CHARLES OKUNZO</p>
+                            <p>BY <span class="text-info">CHARLES OKUNZO</span></p>
                         </div>
                         <div class="d-flex">
                             <span class="p-2 mx-3 circle text-center red">
@@ -44,7 +44,7 @@
                             </span>
                         </div>    
                     </div>           
-                    <a href="" style="border-radius:30px;float: left;" class="btn btn-info text-white fw-bold m-0">VOTE NOW</a>
+                    <a href="" style="border-radius:30px;float: left;" class="btn p-2 btn-info text-white fw-bold m-0">VOTE NOW</a>
                 </div>
             </div>
         </div>
